<resources>
    <string name="app_name">Pizza Hii</string>
    <string name="cuisine">Cuisine</string>
    <string name="commande">Commande</string>

    <string name="action_settings">Reglages</string>
    <string name="cancel">Annuler</string>
    <string name="validate">Valider</string>
    <string name="name">Nom:</string>
    <string name="quantity">Quantité:</string>
    <string name="price">Prix (€):</string>
    <string name="title_activity_commande">Gestion Commande</string>
    <string name="title_activity_cuisine">La cuisine</string>
    <string name="title_activity_menu_button_fragment">menuButtonFragment</string>
    <string name="title_activity_menu_cuisine_fragment">menuCuisineFragment</string>
    <string name="title_activity_menu_commande_fragment">menuCommandeFragment</string>
    <string name="title_activity_test_fragment">testFragment</string>
    <string name="add">Ajouter:</string>

    // String cote serveur
    <string name="nouvelleCommande">Saisir une nouvelle commande</string>
    <string name="modifierCommande">Modifier une commande</string>
    <string name="annulerCommande">Annuler une commande</string>

    // String cote cuisine
    <string name="new_plats">Nouveau plat</string>
    <string name="update_plats">Gestion des plats</string>
    <string name="choose_plat">Choisir un plat:</string>

    // String Accueil
    <string name="welcome_title"> Bienvenue chez Pizza Hii!!</string>
    <string name="welcome_msg"> Selectionnez un role.</string>

    // String cote commande
    <string name="listePlatsDispo"> Voici la liste des plats disponibles </string>
    <string name="numeroCommande"> Numero de commande </string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
